--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -155,4 +155,8 @@
     <!-- Scroll Vibration -->
     <string name="pref_scroll_vibration_title">Scroll Vibration</string>
     <string name="pref_scroll_vibration_summary">Haptic feedback while scrolling through recent apps, if supported</string>
+
+    <!-- Restart launcher -->
+    <string name="pref_restart_title">Restart</string>
+    <string name="pref_restart_summary">Restart the launcher</string>
 </resources>
