Launcher3: Display memory info above overview actions
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: Ic9dc848773e996c60de0e9f273a7e9eaec178b3b
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/superior_dimens.xml
+++ b/res/values/superior_dimens.xml
@@ -6,4 +6,6 @@
 <resources>
     <!-- Meminfo in overview -->
     <dimen name="meminfo_bottom_margin">34dp</dimen>
+    <dimen name="meminfo_top_margin">22dp</dimen>
+
 </resources>
