--- a/res/drawable/bg_all_apps_searchbox.xml
+++ b/res/drawable/bg_all_apps_searchbox.xml
@@ -16,4 +16,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="?attr/allappsHeaderProtectionColor" />
     <corners android:radius="@dimen/rounded_button_radius" />
+    <stroke android:color="?attr/qsbFillColor" android:width=".5dp" />
 </shape>
