--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -31,7 +31,7 @@
 
     <style name="LauncherTheme" parent="@style/BaseLauncherTheme">
         <item name="android:textColorSecondary">@*android:color/system_neutral2_800</item>
-        <item name="allAppsScrimColor">@*android:color/system_neutral1_50</item>
+        <item name="allAppsScrimColor">@*android:color/system_neutral2_50</item>
         <item name="allappsHeaderProtectionColor">@*android:color/transparent</item>
         <item name="searchHintHighlight">@*android:color/system_neutral1_800</item>
         <item name="allAppsNavBarScrimColor">#66FFFFFF</item>
@@ -95,7 +95,7 @@
         <item name="android:textColorHint">#A0FFFFFF</item>
         <item name="android:colorControlHighlight">#19FFFFFF</item>
         <item name="android:colorPrimary">#FF212121</item>
-        <item name="allAppsScrimColor">@*android:color/system_neutral1_900</item>
+        <item name="allAppsScrimColor">@*android:color/system_neutral2_900</item>
         <item name="allappsHeaderProtectionColor">@*android:color/transparent</item>
         <item name="searchHintHighlight">@*android:color/system_accent1_100</item>
         <item name="allAppsNavBarScrimColor">#80000000</item>
@@ -142,8 +142,8 @@
     <!-- A derivative project can extend these themes to customize the application theme without
          affecting the base theme -->
     <style name="AppTheme" parent="@style/LauncherTheme">
-        <item name="qsbFillColor">@color/surface</item>
-        <item name="qsbFillColorThemed">@*android:color/system_neutral1_50</item>
+        <item name="qsbFillColor">@*android:color/system_neutral1_0</item>
+        <item name="qsbFillColorThemed">@*android:color/system_accent1_100</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
         <item name="qsbIconTintSecondary">@color/qsb_secondary</item>
@@ -151,8 +151,8 @@
     </style>
 
     <style name="AppTheme.DarkMainColor" parent="@style/LauncherTheme.DarkMainColor">
-        <item name="qsbFillColor">@color/surface</item>
-        <item name="qsbFillColorThemed">@*android:color/system_neutral1_50</item>
+        <item name="qsbFillColor">@*android:color/system_neutral1_0</item>
+        <item name="qsbFillColorThemed">@*android:color/system_accent1_100</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
         <item name="qsbIconTintSecondary">@color/qsb_secondary</item>
@@ -160,8 +160,8 @@
     </style>
 
     <style name="AppTheme.DarkText" parent="@style/LauncherTheme.DarkText">
-        <item name="qsbFillColor">@color/surface</item>
-        <item name="qsbFillColorThemed">@*android:color/system_neutral1_50</item>
+        <item name="qsbFillColor">@*android:color/system_neutral1_0</item>
+        <item name="qsbFillColorThemed">@*android:color/system_accent1_100</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
         <item name="qsbIconTintSecondary">@color/qsb_secondary</item>
@@ -169,7 +169,7 @@
     </style>
 
     <style name="AppTheme.Dark" parent="@style/LauncherTheme.Dark">
-        <item name="qsbFillColor">@*android:color/system_neutral1_800</item>
+        <item name="qsbFillColor">@color/surface</item>
         <item name="qsbFillColorThemed">@*android:color/system_neutral1_800</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
@@ -178,7 +178,7 @@
     </style>
 
     <style name="AppTheme.Dark.DarkMainColor" parent="@style/LauncherTheme.Dark.DarkMainColor">
-        <item name="qsbFillColor">@*android:color/system_neutral1_800</item>
+        <item name="qsbFillColor">@color/surface</item>
         <item name="qsbFillColorThemed">@*android:color/system_neutral1_800</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
@@ -186,7 +186,7 @@
         <item name="qsbIconTintTertiary">@color/qsb_tertiary</item>
     </style>
     <style name="AppTheme.Dark.DarkText" parent="@style/LauncherTheme.Dark.DarkText">
-        <item name="qsbFillColor">@*android:color/system_neutral1_800</item>
+        <item name="qsbFillColor">@color/surface</item>
         <item name="qsbFillColorThemed">@*android:color/system_neutral1_800</item>
         <item name="qsbIconTintPrimary">@color/qsb_primary</item>
         <item name="qsbIconTintQuaternary">@color/qsb_quaternary</item>
