--- a/res/xml/device_profiles.xml
+++ b/res/xml/device_profiles.xml
@@ -174,7 +174,7 @@
         launcher:numHotseatIcons="5"
         launcher:dbFile="launcher_5_by_6.db"
         launcher:defaultLayoutId="@xml/default_workspace_5x6"
-        launcher:deviceCategory="phone|multi_display" >
+        launcher:deviceCategory="phone|multi_display|tablet" >
 
         <display-option
             launcher:name="Large Phone"
@@ -197,7 +197,7 @@
         launcher:numHotseatIcons="5"
         launcher:dbFile="launcher_5_by_7.db"
         launcher:defaultLayoutId="@xml/default_workspace_5x7"
-        launcher:deviceCategory="phone|multi_display" >
+        launcher:deviceCategory="phone|multi_display|tablet" >
 
         <display-option
             launcher:name="Large Phone"
@@ -268,7 +268,7 @@
         launcher:numHotseatIcons="6"
         launcher:dbFile="launcher_6_by_6.db"
         launcher:defaultLayoutId="@xml/default_workspace_6x6"
-        launcher:deviceCategory="phone|multi_display" >
+        launcher:deviceCategory="phone|multi_display|tablet" >
 
         <display-option
             launcher:name="Large Phone"
