--- a/res/menu/menu_icon_pack.xml
+++ b/res/menu/menu_icon_pack.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2016-2022 crDroid Android Project
+     Copyright (C) 2019 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Themed icons -->
-    <string name="drawable_factory_class" translatable="false">com.android.launcher3.icons.ThirdPartyDrawableFactory</string>
-    
-    <!-- Icon pack -->
-    <string name="icon_pack_settings_class" translatable="false">com.android.launcher3.icons.pack.IconPackSettingsFragment</string>
-    
-</resources>
+    <item
+        android:id="@+id/menu_icon_pack"
+        android:icon="@drawable/ic_icon_pack_plus"
+        android:showAsAction="always"
+        android:title="@string/icon_pack_add" />
+</menu>
