--- a/res/values-night/superior_colors.xml
+++ b/res/values-night/superior_colors.xml
@@ -8,4 +8,6 @@
     
     <!-- Appseat -->
     <color name="appseat_color">@*android:color/system_neutral2_900</color>
+    
+    <color name="mid_clear_all_background_color">@*android:color/system_neutral2_900</color>
 </resources>
