--- a/res/values/superior_colors.xml
+++ b/res/values/superior_colors.xml
@@ -7,4 +7,7 @@
     <color name="disabled_text_color">#66000000</color> <!-- 38% black -->
 
     <color name="gicon_mask">#14000000</color>
+    
+    <!-- Appseat -->
+    <color name="appseat_color">#FFD9DADB</color>
 </resources>
