Launcher3: Match hotseat background with app drawer scrim
* Looks more consistent and elegant.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/superior_colors.xml
+++ b/res/values/superior_colors.xml
@@ -9,5 +9,5 @@
     <color name="gicon_mask">#14000000</color>
     
     <!-- Appseat -->
-    <color name="appseat_color">#FFD9DADB</color>
+    <color name="appseat_color">@*android:color/system_neutral2_50</color>
 </resources>
