--- a/res/xml/default_workspace_6x5.xml
+++ b/res/xml/default_workspace_6x5.xml
@@ -22,7 +22,9 @@
         launcher:packageName="com.google.android.apps.messaging"
         launcher:screen="0"
         launcher:x="0"
-        launcher:y="0" />
+        launcher:y="0"
+        launcher:spanX="6"
+        launcher:spanY="2" />
 
     <favorite
         launcher:className="com.google.android.apps.chrome.Main"
