--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -146,7 +146,7 @@
     
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="recents_meminfo_title">Show Memory info</string>
 
     <!-- Dark Status Bar -->
     <string name="perf_dark_status_bar_title">Dark status bar</string>
