--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -172,4 +172,7 @@
     <string name="short_parallax_summary">Enable full wallpaper scroll effect on smaller numbers of pages instead of cropping the wallpaper</string>
     <string name="single_page_center_title">Single page center</string>
     <string name="single_page_center_summary">Center wallpaper if only using a single page</string>
+
+    <!-- QSB -->
+    <string name="qsb_search_hint">Search this phone and more…</string>
 </resources>
