--- a/res/xml/launcher_recents_preferences.xml
+++ b/res/xml/launcher_recents_preferences.xml
@@ -65,6 +65,12 @@
             android:title="@string/recents_clear_all_title"
             android:defaultValue="true"
             android:persistent="true" />
+            
+       <SwitchPreference
+            android:key="pref_recents_shake_clear_all"
+            android:title="@string/recents_shake_clear_all_title"
+            android:defaultValue="true"
+            android:persistent="true" />
     </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
