--- a/res/values/superior_dimens.xml
+++ b/res/values/superior_dimens.xml
@@ -7,5 +7,8 @@
     <!-- Meminfo in overview -->
     <dimen name="meminfo_bottom_margin">15dp</dimen>
     <dimen name="meminfo_top_margin">18dp</dimen>
+    
+    <!-- Search bar margin -->
+    <dimen name="all_apps_search_bar_margin_top">28dp</dimen>
 
 </resources>
