--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -161,6 +161,8 @@
     <!-- Restart launcher -->
     <string name="pref_restart_title">Restart</string>
     <string name="pref_restart_summary">Restart the launcher</string>
+    <string name="restarting_launcher">Restarting launcher...</string>
+    <string name="updating_launcher_components">Updating launcher components...</string>
 
     <!-- Smartspace -->
     <string name="smartspace_pref_title">At a Glance</string>
